--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,11 @@ main {
 #code {
     display: flex;
     justify-content: center;
+    font-size: 20px;
+}
+
+.card {
+    width: 50%;
 }
 
 #code div {
@@ -41,6 +46,7 @@ select {
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
+    font-size: 20px;
 }
 
 th,
